dark mode fix

--- a/src/app/pages/opening-hours/opening-hours.page.scss
+++ b/src/app/pages/opening-hours/opening-hours.page.scss
@@ -24,7 +24,8 @@ ion-card-content {
   padding: 5px;
 }
 
-.footerButton {
+.footerButton,
+.openingDetails {
   background-color: var(--ion-card-background);
 }
 
